# PowerCapping

./: .gitattributes  .gitignore  .gitmodules  PowerCapping.md  README.md  requirements.txt
applications/: PowerCapping.md
applications/fall3d/: CMakeLists.txt  INSTALL_BAREMETAL.md  INSTALL_CONTAINERISED.md  README.md  REFRAME.md  env.sh  fall3d.py  fall3d_deps.py  fall3d_test.py  fall3d_thea.py  leonardo_modmap.txt  thea_modmap.txt
applications/fall3d/bkup/: INSTALL_BAREMETAL.md  INSTALL_CONTAINERISED.md  fall3d.py  fall3d_deps.py  fall3d_test2.py
applications/fall3d/hpccm/: README.md  Singularity.leonardo.def  Singularity.thea.def  bb.py  bb_recipe.py  bb_singularity_leonardo.def  bb_singularity_thea.def  dockerfile.leonardo.def  hpcx-singularity.md  leonardo.txt  singularity_leonardo.def  singularity_leonardo_final_gdrcopy.def  singularity_thea.def  spack.py  spack.yaml  spack_recipe.py  spack_recipe_mpi.py  spack_recipe_mpi_cuda.py  thea.txt
applications/fall3d/hpccm/bkup/: bb.py  hpcx.txt  spack_bkup.py
applications/fall3d/raikoke-2019-large/: FALL3D.gpu.cmd  FALL3D_GH200.inp  GFS.0p25deg.nc  README.md  Raikoke-2019.inp
applications/mini-specfem/: README.md  specfem3d_elastic_iso_cuda_mpi.py
applications/mini-xshells/: README.md
applications/seissol/: local_docker_build_singularity_image.md
applications/specfem3d_cartesian/: Instructions.md  README.md  specfem3d.py
applications/specfem3d_globe/: INSTALL_BAREMETAL.md  README.md  specfem3d_globe.py
configuration/: OpenCL_benchmark.md  leonardo.py  leonardo_settings.py  thea.py
(+84 files in other folders)
